--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>
-        Hello GitHub
+        Hello GitHub 👩‍💻
     </h1>
     <form>
         <input type="email" placeholder="Enter your email"/>
